syntax = "proto3";

package roadmap;

import "common.proto";

message LaneInternal {
    string id_str = 1;
};

message LaneSequenceInternal {
    int32 size = 1;
    repeated LaneInternal lanes = 2;
};

message Lane {
    int32 seg_id = 1;
    int32 lane_id = 2;
};

message LaneSequence {
    int32 size = 1;
    repeated Lane lanes = 2;
};

message LaneInfo
{
   int32 node_size = 1;
   repeated int32 node_list = 2;
   repeated common.Pos node_pos = 3;
   float width = 4;
};

message Segment
{
   int32 id = 1;
   int32 size = 2;
   repeated LaneInfo lane_infos = 3;
};

message SegmentSet
{
   int32 size = 1;
   repeated Segment segments = 2;
};

message Node
{
   int32 seg_id = 1;
   int32 lane_id = 2;
};

message Section
{
   int32 size = 1;
   repeated Node nodes = 2;
};

message Route
{
   int32 size = 1;
   repeated Section sections = 2;
};

message Junction
{
   int32 junction_id = 1;
   repeated common.Pose junction_entrys = 2;
   repeated common.Pose junction_exits = 3;
   repeated common.Pos vertices = 4;
};